syntax = "proto3";

import "Server/proto/common/common.proto";

package userinfo;

service Userinfo{
    rpc GetInfo(common.CommRequest) returns (InfoReply) {}
    rpc ModInfo(InfoRequest) returns (common.CommReply) {}
}

message InfoRequest {
    common.Head head = 1;
    string headurl = 2;
    string nickname = 3;
}

message InfoReply {
    common.Head head = 1;
    string headurl = 2;
    string nickname = 3;
    int64 total = 4;
    int64 save = 5;
}
